--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,20 @@ body {
   font-weight: normal;
   background: $app-background-color;
   min-height: 100vh;
+  position: relative;
+}
+
+body::-webkit-scrollbar {
+  width: 6px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: rgb(223, 223, 223);        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #fa1d72;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
 }
 
 nav {
@@ -31,4 +45,14 @@ h1 {
 .icon {
   width: 20px;
   height: 20px;
+}
+
+.notes-container{
+  padding: $body-padding;
+  padding-bottom: 80px;
+  display:flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+
 }
