--- a/src/components/Note/note.scss
+++ b/src/components/Note/note.scss
@@ -8,7 +8,7 @@
   background-color: $background-white;
   padding: 20px;
   border-radius: 8px;
-  max-width: 300px;
+  width: 300px;
   margin: 20px;
 }
 
